--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,7 +1,7 @@
 .borrar-curso {
     background-color: red;
     border-radius: 50%;
-    padding: 7px 12px;
+    padding: 1px 8px;
     text-decoration: none;
     color: white;
     font-weight: bold;
@@ -13,24 +13,31 @@ ul {
 .submenu {
     position: relative;
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     margin-top: 40px;
 }
 
 .submenu #carrito{
     display: none;
+    min-width: 100px;
+    align-items: center;
+    text-align: center;
 }
 .submenu:hover #carrito{
     display: block;
-    position: absolute;
-    right:0;
+    position: left;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 20px;
+    max-width: 700px;
+
 
     top:100%;
     z-index: 1;
     background-color: hsl(219, 4%, 7%);
     padding: 20px;
-    min-height: 400px;
-    min-width: 300px;
+    min-height: 300px;
+    min-width: 100px;
 }
 .vacio {
     padding: 10px;
@@ -52,7 +59,7 @@ ul {
     background: hsl(219, 4%, 7%);
     border-radius: 15px;
 }
-@media (min-width: 550px) {
+@media (min-width: 250px) {
     .card {
         text-align: center;
     }
