--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1202,3 +1202,16 @@ transform: scale(1.2);
     right: 2.8rem;
   }
 }
+
+.map{
+  max-width: 300px;
+  min-width: 100px;
+  max-height: 350px;
+  min-height: 300px;
+  margin-top: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
+  padding: 10px 30px;
+  align-content: center;
+  align-items: center;
+}
