--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,7 +39,7 @@
   --z-fixed: 100;
 }
 
-@media screen and (min-width: 968px) {
+@media screen and (min-width: 1600px) {
   :root {
     --h1-font-size: 2.25rem;
     --h2-font-size: 1.5rem;
@@ -176,7 +176,7 @@ font-size: 1.25rem;
   font-size: 1.25rem;
   cursor: pointer;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1550px) {
   .nav__menu{
     position: fixed;
     background-color: hsl(0, 0%, 100%, .1);
@@ -1208,24 +1208,22 @@ transform: scale(1.2);
   min-width: 100px;
   max-height: 350px;
   min-height: 300px;
-  margin-top: 50px;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 10px 30px;
   align-content: center;
   align-items: center;
 }
 .info-contact{
   background-color: silver;
-  margin: 20px auto;
-  border: 300px 400px;
+  margin: 60px auto;
   border-radius: 20px;
-  padding: 30px 15px;
+  padding: 20px 15px;
   min-width: 100px;
-  max-width: 400px;
+  max-width: 300px;
   min-height: 300px;
   max-height: 600px;
-  box-shadow: 2px 2px 20px black;
 }
 .info-contact h2 {
   font-size: 30px;
