--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -744,9 +744,7 @@ transform: scale(1.2);
 .featured__card:hover .featured__img{
   transform: translateX(-.30rem);
 }
-.featured__button:hover{
 
-}
 
 /* Active link featured */
 
@@ -995,15 +993,11 @@ transform: scale(1.2);
     margin-bottom: 4rem;
   }
 }
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 1700px) {
   .section{
     padding: 7rem 0 2rem;
   }
-  .nav{
-    /* margin-top: 1rem;
-    margin-bottom: 1rem;
-    height: calc(var(--header-height)+ 1.5rem); */
-  }
+  
   .nav__toggle,
   .nav__close{
     display: none;
@@ -1204,7 +1198,7 @@ transform: scale(1.2);
 }
 
 .map{
-  max-width: 300px;
+  max-width: 350px;
   min-width: 100px;
   max-height: 350px;
   min-height: 300px;
@@ -1220,21 +1214,19 @@ transform: scale(1.2);
   margin: 60px auto;
   border-radius: 20px;
   padding: 20px 15px;
-  min-width: 100px;
-  max-width: 300px;
-  min-height: 300px;
+  min-width: 200px;
+  max-width: 330px;
+  min-height: 250px;
   max-height: 600px;
 }
 .info-contact h2 {
   font-size: 30px;
   text-align: center;
-}
-.info-contact p{
-  font-size: 16px;
-  text-align: center;
+  color: black;
 }
 .info-contact h3{
   text-align: center;
   color: blue;
-  font-size: 13px;
+  font-size: 15px;
+  margin: 30px auto;
 }
